Исправил ошибку при фильтрации "У владельца"